# TBRT-Avionics-project-code-w-freeRTOS-

./: .gitignore  CMakeLists  CMakeLists.txt  FreeRTOSConfig.h  SETUP.md  main.c
